--- a/res/css/style.css
+++ b/res/css/style.css
@@ -741,9 +741,14 @@
 }
 .fill-container div{
   margin-left: 0%;
-  align-content: center;
+  align-self: center;
   width: 100%;
 } 
+.timer-container div{
+  display: block;
+  margin-left: -15px;
+  margin-right: -15px;
+}
 
 .sizeAdjust form{
   width:75%;
@@ -757,10 +762,10 @@
 }
 .sizeAdjustModal div{
   align-items: center;
-  top: 10%;
-  left: 10%;
-  max-width: 90%;
-  margin-left: -5%;
+  top: 0%;
+  left: 0%;
+  max-width: 75%;
+  margin-left: 10%;
 }
 .sizeAdjustModal img{
   max-width:280px;
@@ -769,12 +774,13 @@
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   .sizeAdjustModal div {
-      max-width: 100%;
-      padding-left: 5%;
+      max-width: 90%;
+      margin-left: 10%;
       padding-right: 5%;
   }
   .sizeAdjustModal img{
-    max-width: 120px;
+    max-width: 90%;
+    
   }
   .sizeAdjustModal h4{
     max-width: 100%;
@@ -784,7 +790,7 @@
     max-width: 400px;
   }
   .fill-container div{
-    margin-left: -10%;
+    margin-left: 0%;
   } 
 }
 .btn button{
