--- a/eventreg/wireframe.css
+++ b/eventreg/wireframe.css
@@ -7,6 +7,13 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+ .form-control{
+   cursor: auto!important
+  }
+  textarea.form-control {
+    height: 6.5rem!important
+}
+
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
