--- a/eventreg/radioCheck.css
+++ b/eventreg/radioCheck.css
@@ -43,3 +43,40 @@ body {
      box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
        background-color:#e0e0e0;
    }
+/*Flat Red button */
+.ph-button {
+	
+  border-style: solid;
+  border-width: 0px 0px 3px;
+  box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
+  color: #FFFFFF;	   
+  border-radius: 6px;
+  cursor: pointer;
+  display: inline-block;
+  font-style: normal;
+  overflow: hidden;
+  text-align: center;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  transition: all 200ms ease-in-out 0s;
+  white-space: nowrap;	
+  font-family: "Gotham Rounded A","Gotham Rounded B",Helvetica,Arial,sans-serif;
+  font-weight: 700;	
+  padding: 19px 39px 18px;
+  font-size: 18px;
+
+}
+/*Blue
+==========================*/
+.ph-btn-blue {
+
+  border-color: #326E99;
+  background-color: #3F8ABF;
+}
+
+.ph-btn-blue:hover, .ph-btn-blue:focus, .ph-btn-blue:active {
+  background-color: #397CAC;
+  border-color: #326E99;   
+}
+
+
