--- a/eventreg/wireframe.css
+++ b/eventreg/wireframe.css
@@ -5845,3 +5845,15 @@ html, body {
     height: 100%;
     content: ' ';
     background: linear-gradient(white, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0)); }
+
+    .modalWrapit {
+        border-radius: 10px;
+        background-color: white;
+        width: 300px;
+        height: 300px;
+        padding: 10px;
+        -webkit-box-shadow: 0px 0px 39px 12px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 0px 39px 12px rgba(0,0,0,0.75);
+        box-shadow: 0px 0px 39px 12px rgba(0,0,0,0.75);
+      }
+      
